--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-header{
+header, .contenitore-blu-scuro{
     background-color: rgba(44,62,80,255);
 }
 
@@ -14,4 +14,13 @@ header{
 
 .contenitore-azzurro{
     background-color: rgba(26,188,156,255);
+}
+
+.contenitore-immagine img{
+    width: 100%;
+    border-radius: 20px;
+}
+
+.contenitore-blu-chiaro{
+    background-color: rgba(58,84,109,255);
 }
