--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,23 @@
     box-sizing: border-box;
 }
 
+header{
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    z-index: 1;
+}
+
 header, .contenitore-blu-scuro{
     background-color: rgba(44,62,80,255);
 }
 
 .primo-titolo{
     font-size: 20px;
+}
+
+.primo-azzurro{
+    padding-top: 100px;
 }
 
 .contenitore-azzurro{
@@ -23,4 +34,52 @@ header, .contenitore-blu-scuro{
 
 .contenitore-blu-chiaro{
     background-color: rgba(58,84,109,255);
+}
+
+.contenitore-immagine-jumbo{
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+}
+
+.contenitore-immagine-jumbo img{
+    width: 90%;
+}
+
+.primo-azzurro h1{
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.primo-azzurro h3{
+    font-size: 15px;
+}
+
+.riga-con-stella{
+    width: 20%;
+    background-color: white;
+    height: 3px;
+    border-radius: 20px;
+}
+
+.fa-star{
+    padding: 0 10px;
+}
+
+.col-12 .riga-con-stella{
+    width: 17%;
+    background-color: #2c3e50;
+}
+
+.color-blue h4{
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.color-blue{
+    color: #2c3e50 ;
+}
+
+.contenitore-azzurro p{
+    padding: 0 20px;
 }
