--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 
 header{
     width: 100%;
-    height: 80px;
     position: fixed;
     z-index: 1;
 }
@@ -82,4 +81,35 @@ header, .contenitore-blu-scuro{
 
 .contenitore-azzurro p{
     padding: 0 20px;
+}
+
+#input{
+    width: 100%;
+    color:#2c3e50 ;
+    font-weight: 600;
+    padding: 10px 0;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    border-bottom: 1px solid lightgray;
+}
+
+#send{
+    background-color: rgba(26,188,156,255);
+}
+
+.contenitore-blu-chiaro span{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    border: 1px solid white;
+    border-radius: 50%;
+    padding: 7px;
+    margin: 10px 5px;
+}
+
+.link{
+    text-decoration: none;
+    color: #24a090;
 }
