modifiche titolo iniziale

--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,9 @@ header, .contenitore-blu-scuro{
     background-color: rgba(44,62,80,255);
 }
 
-.primo-titolo{
+#primo-titolo{
     font-size: 20px;
+    font-weight: 600;
 }
 
 .primo-azzurro{
